* 2008-03-31 - thorben.betten@open-xchange.com

 - Bugfix #11092: Fixed creation of mail folders
 - Bugfix #11088: Fixed sending read acknowledgment for unread messages
 - Bugfix #11096: Fixed display of nested messages' attachments

* 2008-03-20 - marcus.klein@open-xchange.com

 - Bugfix #9447: This problem was fixed with fix for bug #10400.

* 2008-03-20 - thorben.betten@open-xchange.com

 - Bugfix #10969: Removed usages of com.openexchange.cache.CacheKey to
   avoid ClassCastException in a distributed setup
 - Bugfix #10886: Fixed NPE when searching with an empty pattern

* 2008-03-17 - marcus.klein@open-xchange.com

 - Bugfix #11064: Fixed a wrong constructor call.
 - Bugfix #11075: Fixed wrong build of sql search command if user has permission
   to read only own objects in a task folder.
 - Bugfix #9452: Omitting writing empty data object.

* 2008-03-17 - sebastian.kauss@open-xchange.com

 - Bugfix #10974: Clean up configuration files

* 2008-03-13 - thorben.betten@open-xchange.com

 - Partial bugfix #11044: Checking returned rfc822 data's/body's input
   stream for null reference prior to loading message's headers

* 2008-03-13 - sebastian.kauss@open-xchange.com

 - Bugfix #9871: [CONFIG] sessionContainerTimeout is not used
   The config parameter com.openexchange.session.sessionContainerTimeout
   is now used in the sessiond implementation

 - Bugfix #10372: end date of recurring appointment is wrong in 
                  search

 - Bugfix #10925: Context is missing in WebDAV/XML AppointmentWriter

* 2008-03-12 - thorben.betten@open-xchange.com

 - Bugfix #11027: Equal folder name response regardless of request method

* 2008-03-12 - sebastian.kauss@open-xchange.com

 - Bugfix #11012: [L3] WebDAV interface doesn't send Free/Busy 
                       times as UTC

* 2008-03-11 - sebastian.kauss@open-xchange.com

 - Bugfix #10124: API does not return deleted items properly

 - Bugfix #10991: Unable to create tasks via WebDAV/XML if task 