@@ -3,6 +3,8 @@
  - Bugfix #11092: Fixed creation of mail folders
  - Bugfix #11088: Fixed sending read acknowledgment for unread messages
  - Bugfix #11096: Fixed display of nested messages' attachments
+ - Bugfix #9759: Enforced repaint of shared/public folder on user/group
+   deletion
 
 * 2008-03-20 - marcus.klein@open-xchange.com
 
